--- a/Calculator/Base.lproj/Main.storyboard
+++ b/Calculator/Base.lproj/Main.storyboard
@@ -16,10 +16,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xok-dx-BOi">
-                                <rect key="frame" x="0.0" y="270" width="375" height="458.66666666666674"/>
+                                <rect key="frame" x="0.0" y="284" width="375" height="494"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="DZC-wz-aTQ">
-                                        <rect key="frame" x="20" y="20" width="335" height="418.66666666666669"/>
+                                        <rect key="frame" x="20" y="55.333333333333286" width="335" height="418.66666666666674"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kGv-wS-Web">
                                                 <rect key="frame" x="0.0" y="0.0" width="335" height="83.666666666666671"/>
@@ -136,10 +136,10 @@
                                                 </constraints>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bev-LN-Jxj">
-                                                <rect key="frame" x="0.0" y="167.33333333333331" width="335" height="83.666666666666686"/>
+                                                <rect key="frame" x="0.0" y="167.33333333333337" width="335" height="84"/>
                                                 <subviews>
                                                     <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="brT-fz-opN">
-                                                        <rect key="frame" x="0.0" y="1" width="83.666666666666671" height="82.333333333333343"/>
+                                                        <rect key="frame" x="0.0" y="1" width="83.666666666666671" height="82.666666666666671"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" secondItem="brT-fz-opN" secondAttribute="height" multiplier="1:1" id="U2N-xn-K1z"/>
                                                         </constraints>
@@ -153,7 +153,7 @@
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G23-Mq-pjT">
-                                                        <rect key="frame" x="83.666666666666671" y="1" width="84.000000000000014" height="82.333333333333343"/>
+                                                        <rect key="frame" x="83.666666666666671" y="1" width="84.000000000000014" height="82.666666666666671"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                         <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <state key="normal" title="5" backgroundImage="circle.fill" catalog="system">
@@ -164,7 +164,7 @@
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" tag="6" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DUk-Av-9g5">
-                                                        <rect key="frame" x="167.66666666666666" y="1" width="83.666666666666657" height="82.333333333333343"/>
+                                                        <rect key="frame" x="167.66666666666666" y="1" width="83.666666666666657" height="82.666666666666671"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                         <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <state key="normal" title="6" backgroundImage="circle.fill" catalog="system">
@@ -175,7 +175,7 @@
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Xj-Xg-SPi">
-                                                        <rect key="frame" x="251.33333333333329" y="1" width="83.666666666666657" height="82.333333333333343"/>
+                                                        <rect key="frame" x="251.33333333333329" y="1" width="83.666666666666657" height="82.666666666666671"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                         <color key="tintColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <state key="normal" title="-" backgroundImage="circle.fill" catalog="system">
@@ -193,10 +193,10 @@
                                                 </constraints>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4if-wD-mSw">
-                                                <rect key="frame" x="0.0" y="251" width="335" height="84"/>
+                                                <rect key="frame" x="0.0" y="251.33333333333329" width="335" height="83.666666666666657"/>
                                                 <subviews>
                                                     <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bLh-oB-ElP">
-                                                        <rect key="frame" x="0.0" y="1" width="83.666666666666671" height="82.666666666666671"/>
+                                                        <rect key="frame" x="0.0" y="1" width="83.666666666666671" height="82.333333333333343"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" secondItem="bLh-oB-ElP" secondAttribute="height" multiplier="1:1" id="LPI-Lo-Z1E"/>
                                                         </constraints>
@@ -210,7 +210,7 @@
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SRa-cL-b3e">
-                                                        <rect key="frame" x="83.666666666666671" y="1" width="84.000000000000014" height="82.666666666666671"/>
+                                                        <rect key="frame" x="83.666666666666671" y="1" width="84.000000000000014" height="82.333333333333343"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                         <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <state key="normal" title="2" backgroundImage="circle.fill" catalog="system">
@@ -221,7 +221,7 @@
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yXP-PP-uOR">
-                                                        <rect key="frame" x="167.66666666666666" y="1" width="83.666666666666657" height="82.666666666666671"/>
+                                                        <rect key="frame" x="167.66666666666666" y="1" width="83.666666666666657" height="82.333333333333343"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                         <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <state key="normal" title="3" backgroundImage="circle.fill" catalog="system">
@@ -232,7 +232,7 @@
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r32-EJ-Hlk">
-                                                        <rect key="frame" x="251.33333333333329" y="1" width="83.666666666666657" height="82.666666666666671"/>
+                                                        <rect key="frame" x="251.33333333333329" y="1" width="83.666666666666657" height="82.333333333333343"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                                         <color key="tintColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <state key="normal" title="+" backgroundImage="circle.fill" catalog="system">
@@ -250,7 +250,7 @@
                                                 </constraints>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gT1-A5-gAz">
-                                                <rect key="frame" x="0.0" y="335" width="335" height="83.666666666666686"/>
+                                                <rect key="frame" x="0.0" y="335.00000000000006" width="335" height="83.666666666666686"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UrH-Gq-QmR" customClass="RoundedButton" customModule="Calculator" customModuleProvider="target">
                                                         <rect key="frame" x="0.0" y="0.0" width="167.66666666666666" height="83.666666666666671"/>
@@ -329,22 +329,21 @@
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="DZC-wz-aTQ" firstAttribute="leading" secondItem="Xok-dx-BOi" secondAttribute="leading" constant="20" symbolic="YES" id="9tP-xs-etm"/>
-                                    <constraint firstItem="DZC-wz-aTQ" firstAttribute="top" secondItem="Xok-dx-BOi" secondAttribute="top" constant="20" symbolic="YES" id="KT2-fG-chQ"/>
                                     <constraint firstAttribute="trailing" secondItem="DZC-wz-aTQ" secondAttribute="trailing" constant="20" symbolic="YES" id="Zcl-pr-sta"/>
                                     <constraint firstAttribute="bottom" secondItem="DZC-wz-aTQ" secondAttribute="bottom" constant="20" symbolic="YES" id="cWz-xM-XQ8"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aia-aK-wD8">
-                                <rect key="frame" x="0.0" y="44" width="375" height="218"/>
+                                <rect key="frame" x="0.0" y="44" width="375" height="232"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aZ5-iC-n7d">
-                                        <rect key="frame" x="20" y="40" width="335" height="109"/>
+                                        <rect key="frame" x="20" y="40" width="335" height="116"/>
                                         <fontDescription key="fontDescription" type="system" weight="thin" pointSize="90"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AYO-kL-apn">
-                                        <rect key="frame" x="20" y="170" width="335" height="48"/>
+                                        <rect key="frame" x="20" y="184" width="335" height="48"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
